--- a/about.html
+++ b/about.html
@@ -2,21 +2,17 @@
 <html lang="zxx">
 <head>
 	<meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>About</title>
-	<link rel="shortcut icon" href="favicon.ico">
-
-    <link rel="stylesheet" href="prod/css/style.min.css">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>About</title>
+  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="stylesheet" href="prod/css/style.min.css">
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
-<body>
+<body class="animsition">
 
 	<section class="intro">
 		<header>
@@ -36,11 +32,11 @@
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 						<ul class="nav navbar-nav navbar-right main-menu">
-							<li><a href="index.html" >Home</a></li>
-							<li><a href="about.html" class="active">About</a></li>
-							<li ><a href="blog.html">Blog</a></li>
-							<li><a href="#">Services</a></li>
-							<li><a href="#">Contacts</a></li>
+							<li><a class="animsition-link" href="index.html" >Home</a></li>
+							<li><a class="animsition-link active" href="about.html" >About</a></li>
+							<li ><a class="animsition-link" href="blog.html">Blog</a></li>
+							<li><a class="animsition-link" href="#">Services</a></li>
+							<li><a class="animsition-link" href="#">Contacts</a></li>
 						</ul>
 
 					</div><!-- /.navbar-collapse -->
@@ -307,7 +303,9 @@
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="bootstrap-sass/assets/javascripts/bootstrap.min.js"></script>
+<script src="prod/js/jquery.animsition.min.js"></script>
+<script src="prod/js/smoothScroll.js"></script>
+<script src="prod/js/bootstrap.min.js"></script>
 <script src="prod/js/slick.min.js"></script>
 <script src="prod/js/main.min.js"></script>
 </body>
