--- a/index.html
+++ b/index.html
@@ -7,14 +7,12 @@
   <title>AKAD</title>
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="stylesheet" href="prod/css/style.min.css">
-
-<!--[if lt IE 9]>
-<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-<![endif]-->
+  <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+  <![endif]-->
 </head>
-<body>
-
+<body class="animsition">
   <div class="intro intro--home">
     <nav class="navbar top-navbar">
       <div class="container">
@@ -31,11 +29,11 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right main-menu">
-            <li><a href="#" class="active">Home</a></li>
-            <li><a href="about.html">About</a></li> 
-            <li ><a href="blog.html">Blog</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Contacts</a></li>
+            <li><a class="active" href="index.html">Home</a></li>
+            <li><a class="animsition-link" href="about.html">About</a></li> 
+            <li ><a class="animsition-link" href="blog.html">Blog</a></li>
+            <li><a class="animsition-link" href="#">Services</a></li>
+            <li><a class="animsition-link" href="#">Contacts</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
@@ -207,11 +205,11 @@
       <div class="row">
         <div class="col-md-6 col-sm-12">
           <ul class="nav navbar-nav footer-menu">
-            <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li ><a href="blog.html">Blog</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Contacts</a></li>
+            <li><a class="active" href="index.html">Home</a></li>
+            <li><a class="animsition-link" href="about.html">About</a></li>
+            <li ><a class="animsition-link" href="blog.html">Blog</a></li>
+            <li><a class="animsition-link" href="#">Services</a></li>
+            <li><a class="animsition-link" href="#">Contacts</a></li>
           </ul>
         </div>
         <div class="col-md-6 col-sm-12">
@@ -232,7 +230,9 @@
   </footer>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="bootstrap-sass/assets/javascripts/bootstrap.min.js"></script>
+  <script src="prod/js/jquery.animsition.min.js"></script>
+  <script src="prod/js/smoothScroll.js"></script>
+  <script src="prod/js/bootstrap.min.js"></script>
   <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
   <script src="prod/js/main.min.js"></script>
 </body>
